    many requests

CHANGED:

  * cs_local_python_import now raises a more meaningful exception when the
    given filename is incorrect

  * Replaced hacky import mechanism for custom question types with access to
    cs_local_python_import

  * Questions with a "Check" button no longer also have a "Save" button

  * Added error reporting on failed <include> tags.

DEPRECATED:

REMOVED:

FIXED:

  * Fixed an issue with autolocking and auto answer viewing

  * Fixed an issue with checkoff question type not understanding who has
    permissions to submit checkoffs

  * Fixed an issue with storage of manual grades

  * Fixed an error with certain LTI integrations

  * Fixed an incorrect check for whether the target(s) of <include> tags are
    within the tree

  * Fixed an issue with checker_local's multiprocessing on MacOS

SECURITY:

  * Don't allow fresh logins on user settings pages

  * cs_auth_type is now only read from config.py (course-level preload.py files
    cannot change it)

DOCUMENTATION:

VENDORED SOFTWARE:

  * Upgraded Codemirror to v5.65.6 (upgrating to Codemirror v6 will happen in a
    later catsoop version)

  * Upgraded KaTeX to v0.16.0

  * Upgraded Twemoji to v14.0.2


####################
# Version 2021.9.0 #
####################

ADDED:

  * File uploads in the built-in question types now support
    dragging-and-dropping files (in addition to the normal file-chooser setup)

  * Logging of page views (in the problemactions) can now be enabled by setting
    cs_log_page_views = True

  * Allow running via "python3 -m catsoop" in addition to "catsoop"

  * Added experimental support for running checkers on separate machines from
    the web server

  * Added a delete_log function to the cslog module

  * Added a "user settings" page for managing user information, API tokens,
    look-and-feel, and more

  * Unauthenticated users now receive the "Unauthenticated" role, which can be
    used to control permissions
